Tinggal Help dan dokumen

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
                 </select>
                 <button id="change-color-button">Change Color</button>
             </div>
+            <button id="save">Save</button>
             <button id="help">Help</button>
         </div>
     </div>
