--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,10 @@
             <button id="help">Help</button>
         </div>
     </div>
-    <script src="./utils/matrix.js"></script>
+    <script src="./matrix.js"></script>
     <script src="./GLObject.js"></script>
     <script src="./renderer.js"></script>
-    <script src="./loaders/shader.js"></script>
+    <script src="./shader.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
